# xboo

./: .env.example  .gitignore  Makefile  README.md  cookies.txt  glhf.py  langgraph.json  main.py  pyproject.toml  session_cookies.txt
.github/workflows/: ci.yml
src/: config.py  graph.py  settings.py  state.py  tool.py
src/memory/: __init__.py  context.py  tools.py  utils.py
src/recon/: agent.py
src/routing/: __init__.py  router.py
src/scout/: __init__.py  agent.py  config.py  graph.py  model.py  prompt.py  state.py  tool.py
src/scout/agents/: __init__.py  base.py  executor.py  pathfinder.py  planner.py  strategist.py  tactician.py
src/scout/analysis/: __init__.py  flag_detector.py  surface_analyzer.py
src/scout/routing/: router.py
src/scout/tools/: __init__.py  task_dag.py  tool.py
src/scout/utils/: __init__.py  message.py  message_builder.py  schemas.py
src/utils/: problem_api.py  test.py
