[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xbow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.0",
    "langgraph>=1.0",
    "networkx>=3.0",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "codespell>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
