[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xbow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.7.0",
    "langchain>=1.0.4",
    "langchain-openai>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph[agent]>=1.0.2",
    "networkx>=3.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "codespell>=2.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
